--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
         // Main component
         const StoreManagerCalculator = () => {
           const [formData, setFormData] = useState({
-            grossAddGoal: 20,
-            accessoryGoal: 500,
-            autoPayGoal: 10,
-            protectGoal: 10,
-            rpmGoal: 10,
-            pppActivationGoal: 10,
-            upgradeGoal: 10,
+            grossAddGoal: '',
+            accessoryGoal: '',
+            autoPayGoal: '',
+            protectGoal: '',
+            rpmGoal: '',
+            pppActivationGoal: '',
+            upgradeGoal: '',
             plans30: '',
             plans40: '',
             plans55: '',
